# MaCMAE

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
thesis/: config.py  dataset.py
thesis/pretrain/: mae.py  train_mae.py
thesis/probe/: extract_embeddings.py  linear_probe.py
